--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.pptx filter=lfs diff=lfs merge=lfs -text
 *.MOV filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.mat filter=lfs diff=lfs merge=lfs -text
